--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<ol>
 		<li><a href="Final-ID/index.html">Final ID</a></li>
 		<li><a href="Final-WD/index.html">Final WD</a></li>
+		<li><a href="Final-DIW/index.html">Final DIW</a></li>
 	</ol>
 </body>
 </html>
