--- a/Final-DIW/index.html
+++ b/Final-DIW/index.html
@@ -106,7 +106,7 @@
 				</div>
 				
 				<div class="lorem">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+					<p>I'm 20 and I'm a graphic designer. I'm in love with typography and all types of color. This is my place for you to check out my latest creation and to contact me on social network. Feel free to share and remember to credit me.</p>
 				</div>
 			</div>
 			
@@ -122,7 +122,7 @@
 			
 			<div class="visit">
 				<h1>VISIT ME</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+				<p>I hope my site can inspire you with creativity and take a part in your finding ideas for project. If this does helpful to you, please subscribe. Thank you and have a nice day!</p>
 			</div>
 			
 			<div class="insta">
@@ -136,7 +136,7 @@
 			  <div class="final">
 					<div class="content4">
 						<h1>LOREM IPSUM SIT</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+						<p>Hey there! Thank you for visiting my site till this section. I'm always looking forward to seeing your view of my work so just leave me a message right beside.</p>
 						
 						<div class="more">
 							<button name="button" type="button">S E E  M O R E</button>
